--- a/src/style/style.css
+++ b/src/style/style.css
@@ -1,5 +1,7 @@
 .body {
   font-family: "Helvetica Neue", Arial, sans-serif;
-  background-color: #F2F2F2;
+  background-color: #945584;
   min-height: 100vh;
+  text-align: center;
+  max-height: 100vh;
 }
